adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat totam unde consequatur eaque nesciunt nisi pariatur, sint quaerat aperiam, officiis adipisci ad quis aliquid, sit ipsa amet aspernatur eius! Vero!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio repellat voluptate a sunt nihil? Odio eveniet vitae atque ad reprehenderit similique praesentium laboriosam, voluptate deserunt obcaecati dolore minima perspiciatis molestiae.</p>
 </body>
 </html>
